rhacm-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: workshop-page
spec: {}
status: {}
