rhacm-app/httpdtest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpdtest
    app.kubernetes.io/component: httpdtest
    app.kubernetes.io/instance: httpdtest
  name: httpdtest
  namespace: workshop-page
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: httpdtest
  strategy: {}
  template:
    metadata:
      labels:
        deployment: httpdtest
    spec:
      containers:
      - image: ' '
        name: httpdtest
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpdtest
    app.kubernetes.io/component: httpdtest
    app.kubernetes.io/instance: httpdtest
  name: httpdtest
  namespace: workshop-page
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: httpdtest
status:
  loadBalancer: {}
