rhacm-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpdtest
    app.kubernetes.io/component: httpdtest
    app.kubernetes.io/instance: httpdtest
  name: httpdtest
  namespace: workshop-page
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: httpdtest
