rhacm-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpdtest
spec:
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: ""
    name: httpdtest
    weight: null
status: {}
